--- a/Front/ads_module/ad/ad.css
+++ b/Front/ads_module/ad/ad.css
@@ -37,8 +37,8 @@ p {
 
 
 .principle-details img {
-  height: 20%;
-  width: 20%;
+  height:450px;
+  width:300px;
   margin-left: 20%;
   margin-top: 5%;
 }
